--- a/app/static/application-page-2.html
+++ b/app/static/application-page-2.html
@@ -96,7 +96,7 @@
                           <div class="col-12 col-md-6">
                                     <div class="input-animation js-input-animation">
                                       <label class="input-animation__label js-input-animation-label" for="category">Category:</label>
-                                              <input class="input input--bordered js-input-animation-field" type="text" value="Translator" id="category">
+                                              <input class="input input--bordered js-input-animation-field undefined" type="text" value="Translator" id="category">
                                     </div>
                           </div>
                         </div>
@@ -287,7 +287,7 @@
                         <div class="col-12 col-md-6">
                                   <div class="input-animation js-input-animation">
                                     <label class="input-animation__label js-input-animation-label" for="custom">Custom:</label>
-                                            <input class="input input--bordered js-input-animation-field" type="text" id="custom">
+                                            <input class="input input--bordered js-input-animation-field undefined" type="text" id="custom">
                                   </div>
                         </div>
                       </div>
