--- a/app/static/application-page-3.html
+++ b/app/static/application-page-3.html
@@ -76,44 +76,44 @@
                     <div class="column-group column-group--sm">
                       <div class="column-group__item">
                                 <div class="input-animation js-input-animation input-animation--required">
-                                  <label class="input-animation__label js-input-animation-label" for="name">Name, surname:</label>
-                                          <input class="input input--bordered js-input-animation-field" type="text" id="name">
+                                  <label class="input-animation__label js-input-animation-label" for="name">Name, surname</label>
+                                          <input class="input input--bordered js-input-animation-field undefined" type="text" id="name">
                                 </div>
                       </div>
                       <div class="column-group__item">
                         <div class="row-group row-group--flex-1">
                           <div class="row-group__item">
                                     <div class="input-animation js-input-animation input-animation--required">
-                                      <label class="input-animation__label js-input-animation-label" for="email">Email:</label>
-                                              <input class="input input--bordered js-input-animation-field" type="email" id="email">
+                                      <label class="input-animation__label js-input-animation-label" for="email">Email</label>
+                                              <input class="input input--bordered js-input-animation-field undefined" type="email" id="email">
                                     </div>
                           </div>
                           <div class="row-group__item">
                                     <div class="input-animation js-input-animation input-animation--required">
-                                      <label class="input-animation__label js-input-animation-label" for="phone">Phone number:</label>
-                                              <input class="input input--bordered js-input-animation-field" type="email" id="phone">
+                                      <label class="input-animation__label js-input-animation-label" for="phone">Phone number</label>
+                                              <input class="input input--bordered js-input-animation-field undefined" type="email" id="phone">
                                     </div>
                           </div>
                         </div>
                       </div>
                       <div class="column-group__item">
                                 <div class="input-animation js-input-animation input-animation--required">
-                                  <label class="input-animation__label js-input-animation-label" for="address">Address #1:</label>
-                                          <input class="input input--bordered js-input-animation-field" type="text" id="address">
+                                  <label class="input-animation__label js-input-animation-label" for="address">Address #1</label>
+                                          <input class="input input--bordered js-input-animation-field undefined" type="text" id="address">
                                 </div>
                       </div>
                       <div class="column-group__item">
                         <div class="row-group row-group--flex-1">
                           <div class="row-group__item">
                                     <div class="input-animation js-input-animation input-animation--required">
-                                      <label class="input-animation__label js-input-animation-label" for="zip">Zip code:</label>
-                                              <input class="input input--bordered js-input-animation-field" type="text" id="zip">
+                                      <label class="input-animation__label js-input-animation-label" for="zip">Zip code</label>
+                                              <input class="input input--bordered js-input-animation-field undefined" type="text" id="zip">
                                     </div>
                           </div>
                           <div class="row-group__item">
                                     <div class="input-animation js-input-animation input-animation--required">
-                                      <label class="input-animation__label js-input-animation-label" for="city">City:</label>
-                                              <input class="input input--bordered js-input-animation-field" type="text" id="city">
+                                      <label class="input-animation__label js-input-animation-label" for="city">City</label>
+                                              <input class="input input--bordered js-input-animation-field undefined" type="text" id="city">
                                     </div>
                           </div>
                         </div>
@@ -122,14 +122,16 @@
                         <div class="row-group row-group--flex-1">
                           <div class="row-group__item">
                                     <div class="input-animation js-input-animation input-animation--required">
-                                      <label class="input-animation__label js-input-animation-label" for="language">Your native language:</label>
-                                              <input class="input input--bordered js-input-animation-field" type="text" id="language">
+                                      <label class="input-animation__label js-input-animation-label" for="language">Your native language</label>
+                                              <input class="input input--bordered js-input-animation-field undefined" type="text" id="language">
                                     </div>
                           </div>
                           <div class="row-group__item">
-                                    <div class="input-animation js-input-animation input-animation--required">
-                                      <label class="input-animation__label js-input-animation-label" for="birthday">Birthday:</label>
-                                              <input class="input input--bordered js-input-animation-field" type="text" id="birthday">
+                                    <div class="datepicker">
+                                              <div class="input-animation js-input-animation input-animation--required">
+                                                <label class="input-animation__label js-input-animation-label" for="birthday">Birthday</label>
+                                                        <input class="input input--bordered js-input-animation-field datepicker__input js-datepicker-input" type="text" id="birthday">
+                                              </div>
                                     </div>
                           </div>
                         </div>
@@ -137,7 +139,7 @@
                       <div class="column-group__item">
                                 <div class="input-animation js-input-animation">
                                   <label class="input-animation__label js-input-animation-label" for="info">Additional info:</label>
-                                          <input class="input input--bordered js-input-animation-field" type="text" id="info">
+                                          <input class="input input--bordered js-input-animation-field undefined" type="text" id="info">
                                 </div>
                       </div>
                     </div>
@@ -158,38 +160,38 @@
                       <div class="column-group column-group--sm">
                         <div class="column-group__item">
                                   <div class="input-animation js-input-animation input-animation--required">
-                                    <label class="input-animation__label js-input-animation-label" for="holder">Account holder:</label>
-                                            <input class="input input--bordered js-input-animation-field" type="text" id="holder">
+                                    <label class="input-animation__label js-input-animation-label" for="holder">Account holder</label>
+                                            <input class="input input--bordered js-input-animation-field undefined" type="text" id="holder">
                                   </div>
                         </div>
                         <div class="column-group__item">
                                   <div class="input-animation js-input-animation input-animation--required">
-                                    <label class="input-animation__label js-input-animation-label" for="bankName">Bank name:</label>
-                                            <input class="input input--bordered js-input-animation-field" type="text" id="bankName">
+                                    <label class="input-animation__label js-input-animation-label" for="bankName">Bank name</label>
+                                            <input class="input input--bordered js-input-animation-field undefined" type="text" id="bankName">
                                   </div>
                         </div>
                         <div class="column-group__item">
                                   <div class="input-animation js-input-animation input-animation--required">
-                                    <label class="input-animation__label js-input-animation-label" for="bankAccount">Bank account no:</label>
-                                            <input class="input input--bordered js-input-animation-field" type="number" id="bankAccount">
+                                    <label class="input-animation__label js-input-animation-label" for="bankAccount">Bank account no</label>
+                                            <input class="input input--bordered js-input-animation-field undefined" type="number" id="bankAccount">
                                   </div>
                         </div>
                         <div class="column-group__item">
                                   <div class="input-animation js-input-animation input-animation--required">
-                                    <label class="input-animation__label js-input-animation-label" for="swiftNumber">Swift Number:</label>
-                                            <input class="input input--bordered js-input-animation-field" type="number" id="swiftNumber">
+                                    <label class="input-animation__label js-input-animation-label" for="swiftNumber">Swift Number</label>
+                                            <input class="input input--bordered js-input-animation-field undefined" type="number" id="swiftNumber">
                                   </div>
                         </div>
                         <div class="column-group__item">
                                   <div class="input-animation js-input-animation input-animation--required">
-                                    <label class="input-animation__label js-input-animation-label" for="bankCode">Bank code:</label>
-                                            <input class="input input--bordered js-input-animation-field" type="number" id="bankCode">
+                                    <label class="input-animation__label js-input-animation-label" for="bankCode">Bank code</label>
+                                            <input class="input input--bordered js-input-animation-field undefined" type="number" id="bankCode">
                                   </div>
                         </div>
                         <div class="column-group__item">
                                   <div class="input-animation js-input-animation">
                                     <label class="input-animation__label js-input-animation-label" for="paypalEmail">Paypal email if avaliable:</label>
-                                            <input class="input input--bordered js-input-animation-field" type="number" id="paypalEmail">
+                                            <input class="input input--bordered js-input-animation-field undefined" type="number" id="paypalEmail">
                                   </div>
                         </div>
                       </div>
