--- a/app/static/login-page.html
+++ b/app/static/login-page.html
@@ -45,7 +45,7 @@
                   <div class="form-group">
                     <div class="input-animation js-input-animation">
                       <label class="input-animation__label js-input-animation-label" for="email">Email:</label>
-                      <input class="input input--bordered js-input-animation-field" type="email" id="email"/>
+                      <input class="input input--bordered js-input-animation-field undefined" type="email" id="email"/>
                     </div>
                   </div>
                 </div>
@@ -53,7 +53,7 @@
                   <div class="form-group">
                     <div class="input-animation js-input-animation">
                       <label class="input-animation__label js-input-animation-label" for="password">Password:</label>
-                      <input class="input input--bordered js-input-animation-field" type="password" id="password"/>
+                      <input class="input input--bordered js-input-animation-field undefined" type="password" id="password"/>
                     </div>
                   </div>
                 </div>
