form-stepper"s mobile view was improved

--- a/app/static/application-page-1.html
+++ b/app/static/application-page-1.html
@@ -40,9 +40,21 @@
           </div>
           <div class="application-form__item">
                     <div class="form-steps">
-                      <div class="form-steps__step is-active"><span class="form-steps__title">1. Services &amp; Prices</span></div>
-                      <div class="form-steps__step"><span class="form-steps__title">2. Education &amp; Legal</span></div>
-                      <div class="form-steps__step"><span class="form-steps__title">3. Contact information</span></div>
+                      <div class="form-steps__step is-active">
+                        <div class="form-steps__title"><span class="form-steps__title-number">1.&nbsp;</span>
+<span class="form-steps__title-text">Services &amp; Prices</span>
+                        </div>
+                      </div>
+                      <div class="form-steps__step">
+                        <div class="form-steps__title"><span class="form-steps__title-number">2.&nbsp;</span>
+<span class="form-steps__title-text">Education &amp; Legal</span>
+                        </div>
+                      </div>
+                      <div class="form-steps__step">
+                        <div class="form-steps__title"><span class="form-steps__title-number">3.&nbsp;</span>
+<span class="form-steps__title-text">Contact information</span>
+                        </div>
+                      </div>
                     </div>
           </div>
           <div class="application-form__item">
