latest fixes were added

--- a/app/static/application-page-1.html
+++ b/app/static/application-page-1.html
@@ -82,7 +82,7 @@
                   <div class="row-group__item">
                     <label class="radio">
                       <div class="radio__box">
-                        <input class="radio__input" type="radio" checked value="no" name="translation"><span class="radio__checkmark"></span>
+                        <input class="radio__input" type="radio" value="no" name="translation"><span class="radio__checkmark"></span>
                       </div><span class="radio__name">No</span>
                     </label>
                   </div>
@@ -369,7 +369,7 @@
                   <div class="row-group__item">
                     <label class="radio">
                       <div class="radio__box">
-                        <input class="radio__input" type="radio" checked value="no" name="proofreading"><span class="radio__checkmark"></span>
+                        <input class="radio__input" type="radio" value="no" name="proofreading"><span class="radio__checkmark"></span>
                       </div><span class="radio__name">No</span>
                     </label>
                   </div>
@@ -537,7 +537,7 @@
                   <div class="row-group__item">
                     <label class="radio">
                       <div class="radio__box">
-                        <input class="radio__input" type="radio" checked value="no" name="cProofreading"><span class="radio__checkmark"></span>
+                        <input class="radio__input" type="radio" value="no" name="cProofreading"><span class="radio__checkmark"></span>
                       </div><span class="radio__name">No</span>
                     </label>
                   </div>
@@ -545,6 +545,31 @@
               </div>
             </div>
             <div data-radio-toggle-content="cProofreading">
+              <div class="application-form__card-line">
+                <div class="row">
+                  <div class="col-12 col-md-6">
+                    <div class="form-group">
+                      <div class="form-group__header">
+                        <p>How do you calculate the price?</p>
+                      </div>
+                      <div class="select js-select">
+                        <button class="select__label js-select-label" data-selected="select1" type="button"><span>Select 1</span>
+                        </button>
+                        <div class="select__wrap js-select-wrap">
+                          <div class="select__options js-select-options">
+                            <div class="custom-scroll select__options-scroll" data-select-simplebar>
+                              <div class="select__option js-select-option" data-option="select1"><span>Select 1</span></div>
+                              <div class="select__option js-select-option" data-option="select2"><span>Select 2</span></div>
+                              <div class="select__option js-select-option" data-option="select3"><span>Select 3</span></div>
+                            </div>
+                          </div>
+                        </div>
+                        <input class="select__input js-select-input" type="hidden">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
               <div class="application-form__card-line">
                 <div class="row">
                   <div class="col-12 col-md-6 mb-6 mb-md-0">
@@ -637,7 +662,7 @@
                   <div class="row-group__item">
                     <label class="radio">
                       <div class="radio__box">
-                        <input class="radio__input" type="radio" checked value="no" name="interpreting"><span class="radio__checkmark"></span>
+                        <input class="radio__input" type="radio" value="no" name="interpreting"><span class="radio__checkmark"></span>
                       </div><span class="radio__name">No</span>
                     </label>
                   </div>
@@ -874,7 +899,7 @@
                   <div class="row-group__item">
                     <label class="radio">
                       <div class="radio__box">
-                        <input class="radio__input" type="radio" checked value="no" name="writing"><span class="radio__checkmark"></span>
+                        <input class="radio__input" type="radio" value="no" name="writing"><span class="radio__checkmark"></span>
                       </div><span class="radio__name">No</span>
                     </label>
                   </div>
@@ -974,7 +999,7 @@
                   <div class="row-group__item">
                     <label class="radio">
                       <div class="radio__box">
-                        <input class="radio__input" type="radio" checked value="no" name="transcribing"><span class="radio__checkmark"></span>
+                        <input class="radio__input" type="radio" value="no" name="transcribing"><span class="radio__checkmark"></span>
                       </div><span class="radio__name">No</span>
                     </label>
                   </div>
