--- a/app/static/application-page-2.html
+++ b/app/static/application-page-2.html
@@ -85,7 +85,7 @@
                   <div class="row-group__item">
                     <label class="radio">
                       <div class="radio__box">
-                        <input class="radio__input" type="radio" checked value="no" name="diploma"><span class="radio__checkmark"></span>
+                        <input class="radio__input" type="radio" value="no" name="diploma"><span class="radio__checkmark"></span>
                       </div><span class="radio__name">No</span>
                     </label>
                   </div>
@@ -98,7 +98,7 @@
                   <div class="col-12 col-lg-8">
                     <div class="form-group">
                       <div class="form-group__header">
-                        <p><span/ class="h3 text-surfie-green">#1</span> Do you have a diploma?</p>
+                        <p><span/ class="h3 text-surfie-green">#1</span> Your diploma:</p>
                       </div>
                       <div class="row">
                         <div class="col-12 col-md-6 mb-5 mb-md-0">
@@ -116,7 +116,7 @@
                 </div>
               </div>
               <div class="application-form__card-line">
-                <button class="button button--bordered" type="button"><span>Add combination</span><span class="button__icon">
+                <button class="button button--bordered" type="button"><span>One more</span><span class="button__icon">
                               <svg class="svg-icon svg-icon--surfie-green" width="14" height="14">
                                 <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
                               </svg></span>
@@ -146,7 +146,7 @@
                   <div class="row-group__item">
                     <label class="radio">
                       <div class="radio__box">
-                        <input class="radio__input" type="radio" checked value="no" name="invoiceAbility"><span class="radio__checkmark"></span>
+                        <input class="radio__input" type="radio" value="no" name="invoiceAbility"><span class="radio__checkmark"></span>
                       </div><span class="radio__name">No</span>
                     </label>
                   </div>
@@ -209,13 +209,6 @@
                   <div class="custom-scroll custom-scroll--scroll-visible drag-and-drop-box__preview-scroll" data-simplebar></div>
                 </div>
               </div>
-            </div>
-            <div class="application-form__card-line">
-              <button class="button button--bordered" type="button"><span>Add more</span><span class="button__icon">
-                            <svg class="svg-icon svg-icon--surfie-green" width="14" height="14">
-                              <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
-                            </svg></span>
-              </button>
             </div>
           </div>
         </div>
