drag and drop box was refactored

--- a/app/static/application-page-2.html
+++ b/app/static/application-page-2.html
@@ -186,27 +186,31 @@
               </div>
             </div>
             <div class="application-form__card-line">
-              <div class="drag-and-drop-box js-drag-and-drop-box">
-                <div class="drag-and-drop-box__label dz-message"><span class="drag-and-drop-box__label-title">Drag and drop files</span>
-                  <button class="button button--squere button--bg-alabaster drag-and-drop-box__label-button" type="button">
-                    <svg class="svg-icon svg-icon--surfie-green" width="14" height="14">
-                      <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
-                    </svg>
-                  </button>
-                </div>
-                <div class="drag-and-drop-box__tpl">
-                  <div class="document-list-item">
-                    <div class="document-list-item__icon"><img src="images/icons/document-placeholder.svg" alt="placeholder"></div>
-                    <div class="document-list-item__title" data-dz-name></div>
-                    <div class="document-list-item__delete">
-                      <svg class="svg-icon svg-icon--brick-red" width="10" height="10" data-dz-remove="data-dz-remove">
-                        <use href="images/svg/svg-sprite/symbol/sprite.svg#close" x="0" y="0"></use>
-                      </svg>
+              <div class="row">
+                <div class="col-12 col-md-6 col-lg-5">
+                  <div class="drag-and-drop-box js-drag-and-drop-box">
+                    <div class="drag-and-drop-box__label dz-message"><span class="drag-and-drop-box__label-title">Drag and drop files</span>
+                      <button class="button button--squere button--bg-alabaster drag-and-drop-box__label-button" type="button">
+                        <svg class="svg-icon svg-icon--surfie-green" width="14" height="14">
+                          <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
+                        </svg>
+                      </button>
+                    </div>
+                    <div class="drag-and-drop-box__tpl">
+                      <div class="document-list-item">
+                        <div class="document-list-item__icon"><img src="images/icons/document-placeholder.svg" alt="placeholder"></div>
+                        <div class="document-list-item__title" data-dz-name></div>
+                        <div class="document-list-item__delete">
+                          <svg class="svg-icon svg-icon--brick-red" width="10" height="10" data-dz-remove="data-dz-remove">
+                            <use href="images/svg/svg-sprite/symbol/sprite.svg#close" x="0" y="0"></use>
+                          </svg>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="drag-and-drop-box__preview">
+                      <div class="custom-scroll custom-scroll--scroll-visible drag-and-drop-box__preview-scroll" data-simplebar></div>
                     </div>
                   </div>
-                </div>
-                <div class="drag-and-drop-box__preview">
-                  <div class="custom-scroll custom-scroll--scroll-visible drag-and-drop-box__preview-scroll" data-simplebar></div>
                 </div>
               </div>
             </div>
