--- a/app/static/application-page-2.html
+++ b/app/static/application-page-2.html
@@ -199,6 +199,7 @@
                     </div>
                     <div class="drag-and-drop-box__tpl">
                       <div class="document-list-item">
+                        <div class="document-list-item__progress" data-dz-uploadprogress></div>
                         <div class="document-list-item__icon"><img src="images/icons/document-placeholder.svg" alt="placeholder"></div>
                         <div class="document-list-item__title" data-dz-name></div>
                         <div class="document-list-item__delete">
