bigger paddings were added to forms

--- a/app/static/application-page-3.html
+++ b/app/static/application-page-3.html
@@ -70,7 +70,7 @@
             <div class="application-form__card-line">
               <div class="row">
                 <div class="col-12 col-md-6">
-                  <div class="column-group column-group--sm">
+                  <div class="column-group column-group--md">
                     <div class="column-group__item">
                       <div class="input-animation js-input-animation input-animation--required">
                         <label class="input-animation__label js-input-animation-label" for="name">Name, surname</label>
@@ -154,7 +154,7 @@
                 </div>
                 <div class="row">
                   <div class="col-12 col-md-6">
-                    <div class="column-group column-group--sm">
+                    <div class="column-group column-group--md">
                       <div class="column-group__item">
                         <div class="input-animation js-input-animation input-animation--required">
                           <label class="input-animation__label js-input-animation-label" for="holder">Account holder</label>
