--- a/app/static/employer-application-page.html
+++ b/app/static/employer-application-page.html
@@ -44,7 +44,7 @@
         <div class="application-form__item">
           <div class="application-form__card">
             <div class="application-form__card-line">
-              <div class="column-group column-group--sm">
+              <div class="column-group column-group--md">
                 <div class="column-group__item">
                   <div class="input-animation js-input-animation input-animation--required">
                     <label class="input-animation__label js-input-animation-label" for="name">Name, surname</label>
