header component was created

--- a/app/static/employer-application-page.html
+++ b/app/static/employer-application-page.html
@@ -14,7 +14,7 @@
 <body>
   <div class="employer-application-page">
     <div class="employer-application-page__header">
-      <div class="inner-header">
+      <header class="inner-header">
         <div class="inner-header__wrap"><a class="inner-header__logo" href="#"><img src="images/logo.svg" alt="logo" /></a>
           <div class="inner-header__lang">
             <div class="select js-select select--bordered select--auto">
@@ -33,7 +33,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </header>
     </div>
     <div class="employer-application-page__form">
       <form class="application-form">
